force-app/main/default/objects/NPS_Matrix__c/NPS_Matrix__c.object-meta.xml
<CustomObject>
    <label>NPS Matrix</label>
    <nameField>
        <label>NPS Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>