force-app/main/default/objects/NPS_Matrix__c/fields/Account_Team_Role_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Role_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Team Role 1</label>
    <referenceTo>Account_Team_Role__c</referenceTo>
    <relationshipName>NPS_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>