force-app/main/default/objects/NPS_Matrix__c/fields/Account_Team_Role_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Role_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Team Role 2</label>
    <referenceTo>Account_Team_Role__c</referenceTo>
    <relationshipName>NPS_Matrices1</relationshipName>
    <type>Lookup</type>
</CustomField>