force-app/main/default/objects/NPS_Matrix__c/fields/Additional_Recipient_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 2</label>
    <referenceTo>Account_Team_Role__c</referenceTo>
    <relationshipName>NPS_Matrices6</relationshipName>
    <type>Lookup</type>
</CustomField>