force-app/main/default/objects/NPS_Matrix__c/fields/Advocate__c.field-meta.xml
<CustomField>
    <fullName>Advocate__c</fullName>
    <description>use to store email</description>
    <label>Advocate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>