force-app/main/default/objects/NPS_Matrix__c/fields/Commercial_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account_Tier__c</fullName>
    <label>Commercial Account Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>