force-app/main/default/objects/NPS_Matrix__c/fields/CX_Email__c.field-meta.xml
<CustomField>
    <fullName>CX_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CX Email</label>
    <type>Checkbox</type>
</CustomField>