force-app/main/default/objects/NPS_Matrix__c/fields/GCP_PM__c.field-meta.xml
<CustomField>
    <fullName>GCP_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GCP PM</label>
    <type>Checkbox</type>
</CustomField>