force-app/main/default/objects/NPS_Matrix__c/fields/OMS_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>OMS_Case_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMS Case Manager</label>
    <type>Checkbox</type>
</CustomField>