force-app/main/default/objects/NPS_Matrix__c/fields/Oversample_Flag__c.field-meta.xml
<CustomField>
    <fullName>Oversample_Flag__c</fullName>
    <label>Oversample Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>