force-app/main/default/objects/NPS_Matrix__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Creation</fullName>
            </value>
            <value>
                <fullName>Case Owner</fullName>
            </value>
            <value>
                <fullName>Field Advocate</fullName>
            </value>
            <value>
                <fullName>Passive Promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>