force-app/main/default/objects/NPS_Matrix__c/listViews/All_NPS_Matrix.listView-meta.xml
<ListView>
    <fullName>All_NPS_Matrix</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Segment__c</columns>
    <columns>Region__c</columns>
    <columns>Commercial_Account_Tier__c</columns>
    <columns>NPS_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All NPS Matrix</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>